<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pic</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_viewpager">Viewpager</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="welcome_text">图片改变生活</string>
 <!-- <the following string are added by Cherry> -->
    <string name="title_activity_login">Login</string>
    <string name="account_input_string">账号：</string>
    <string name="account_hit_string">用户昵称或email</string>
    <string name="password_input_string">密码：</string>
    <string name="login_remeberPassword_string">记住密码</string>
    <string name="login_Btn_string">登陆</string>
    <string name="login_findPassword_link">忘记密码？<a href="#" mce_href="#">找回密码</a></string>
    <string name="login_register_link">没有账号？<a href="activity_register.xml" mce_href="#">注册</a></string>
    <string name="title_activity_register">Register</string>
    <string name="confirm_password_string">确认密码：</string>
    <string name="username_input_string">用户名：</string>
    <string name="username_hit_string">请输入用户昵称</string>
    <string name="email_input_string">邮件：</string>
    <string name="title_activity_find_password">FindPasswordActivity</string>
    <string name="email_hit_string">请输入注册邮件：</string>
</resources>
