<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegisterLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <RelativeLayout
        android:id="@+id/register_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="#55FFFFFF"
        android:padding="10dip" >

        <TextView
            android:id="@+id/register_usernaem_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/username_input_string"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/register_username_editView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_usernaem_TextView"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/user_account"
            android:ems="20"
            android:hint="@string/username_hit_string"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/register_email_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_username_editView"
            android:layout_marginTop="5dp"
            android:text="@string/email_input_string"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/register_email_editView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_email_TextView"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/user_email"
            android:ems="20"
            android:hint="@string/username_hit_string"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/register_password_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_email_editView"
            android:layout_marginTop="8dp"
            android:text="@string/password_input_string" />

        <EditText
            android:id="@+id/register_password_editView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_password_textView"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/user_password"
            android:ems="20"
            android:inputType="textPassword"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/register_confirmpassword_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_password_editView"
            android:layout_marginTop="8dp"
            android:text="@string/confirm_password_string" />

        <EditText
            android:id="@+id/register_confirmpassword_editView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_confirmpassword_textView"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/user_password"
            android:ems="20"
            android:inputType="textPassword"
            android:textSize="15sp" />
        <Button
        android:id="@+id/register_Btn"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/register_confirmpassword_editView"
        
        android:text="注册" />
        
    </RelativeLayout>

    
</LinearLayout>